facet-json/tests/integration/snapshots/r#mod__integration__err__bad_json_1.snap
---
source: facet-json/tests/integration/err.rs
expression: err
---
[2m     1[0m }
       [31m⎩[0m [94mUnexpectedCharacter('}')[0m
