facet-json/tests/integration/snapshots/r#mod__integration__err__bad_json_5.snap
---
source: facet-json/tests/integration/err.rs
expression: err
---
[2m     1[0m 
[2m     2[0m   }
         [31m⎩[0m [94mUnexpectedCharacter('}')[0m
[2m     3[0m // and then some
